Update index.html for better SEO

--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My App</title>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9570335781120627"
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9570335781120627"
      crossorigin="anonymous"></script>
-</head>
-<body>
-  <div id="root"></div>
- 
-  <script type="module" src="/src/main.jsx"></script>
-</body>
+
+    <title>Trackviso — Gamified study tracker</title>
+    <meta name="description" content="Trackviso makes studying consistent with quests, streaks, and insights. Turn revision into a game and level up daily." />
+    <link rel="canonical" href="https://trackviso.vercel.app/" />
+    <meta name="theme-color" content="#0ea5e9" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://trackviso.vercel.app/" />
+    <meta property="og:title" content="Trackviso — Gamified study tracker" />
+    <meta property="og:description" content="Stay consistent with quests, streaks, and insights." />
+    <meta property="og:image" content="https://trackviso.vercel.app/og-image.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Trackviso — Gamified study tracker" />
+    <meta name="twitter:description" content="Stay consistent with quests, streaks, and insights." />
+    <meta name="twitter:image" content="https://trackviso.vercel.app/og-image.png" />
+
+    <!-- Icons & manifest (added in Steps 2 & 3) -->
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Perf hints -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
