--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      crossorigin="anonymous"></script>
 
     <title>Trackviso — Gamified study tracker</title>
-    <meta name="description" content="Trackviso makes studying consistent with quests, streaks, and insights. Turn revision into a game and level up daily." />
+    <meta name="description" content="Trackviso is a progress tracking app that turns your studying into a game with streaks, quests, and insights to keep you consistent." />
     <link rel="canonical" href="https://trackviso.vercel.app/" />
     <meta name="theme-color" content="#0ea5e9" />
 
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://trackviso.vercel.app/" />
     <meta property="og:title" content="Trackviso — Gamified study tracker" />
-    <meta property="og:description" content="Stay consistent with quests, streaks, and insights." />
+    <meta property="og:description" content="Trackviso is a progress tracking app that turns your studying into a game with streaks, quests, and insights to keep you consistent." />
     <meta property="og:image" content="https://trackviso.vercel.app/og-image.png" />
 
     <!-- Twitter -->
@@ -34,6 +34,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
