--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -31,6 +32,32 @@
 
     <!-- Perf hints -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+     <script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"SoftwareApplication",
+  "name":"Trackviso",
+  "applicationCategory":"EducationalApplication",
+  "operatingSystem":"Web",
+  "url":"https://trackviso.vercel.app/",
+  "description":"Gamified study tracker with quests, streaks, and insights.",
+  "offers":{"@type":"Offer","price":"0","priceCurrency":"GBP"}
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"WebSite",
+  "name":"Trackviso",
+  "url":"https://trackviso.vercel.app/",
+  "potentialAction":{
+  
+  }
+}
+</script>
+
   </head>
   <body>
     <div id="root"></div>
