--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9570335781120627"
      crossorigin="anonymous"></script>
+    <meta name="google-site-verification" content="LyiJaoZD-z6D1MtEKGRLA7IDfeWZBODe8-n38yxAHn0" />
 
     <title>Trackviso — Gamified study tracker</title>
     <meta name="description" content="Trackviso is a progress tracking app that turns your studying into a game with streaks, quests, and insights to keep you consistent." />
