--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
 }
 </script>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DCM1WBN2ZQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DCM1WBN2ZQ');
+</script>
+
   </head>
   <body>
     <div id="root"></div>
