chore: update domain to trackviso-beta.vercel.app across the codebase

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   "name": "Trackviso",
   "applicationCategory": "EducationalApplication",
   "operatingSystem": "Web",
-  "url": "https://trackviso.vercel.app/",
+  "url": "https://trackviso-beta.vercel.app/",
   "description": "Gamified study tracker with quests, streaks, and insights to keep you consistent. Track study sessions, earn XP, complete quests, and get AI-powered insights.",
   "offers": {
     "@type": "Offer",
@@ -54,7 +54,7 @@
     "Subject and task management",
     "Progress analytics and visualizations"
   ],
-  "screenshot": "https://trackviso.vercel.app/og.png",
+  "screenshot": "https://trackviso-beta.vercel.app/og.png",
   "softwareVersion": "0.20",
   "releaseNotes": "Gamified study tracking with AI-powered features"
 }
@@ -66,10 +66,10 @@
   "@context": "https://schema.org",
   "@type": "WebSite",
   "name": "Trackviso",
-  "url": "https://trackviso.vercel.app/",
+  "url": "https://trackviso-beta.vercel.app/",
   "potentialAction": {
     "@type": "SearchAction",
-    "target": "https://trackviso.vercel.app/search?q={search_term_string}",
+    "target": "https://trackviso-beta.vercel.app/search?q={search_term_string}",
     "query-input": "required name=search_term_string"
   }
 }
@@ -81,8 +81,8 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Trackviso",
-  "url": "https://trackviso.vercel.app/",
-  "logo": "https://trackviso.vercel.app/og.png",
+  "url": "https://trackviso-beta.vercel.app/",
+  "logo": "https://trackviso-beta.vercel.app/og.png",
   "description": "Gamified study tracking platform for students",
   "contactPoint": {
     "@type": "ContactPoint",
