--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Trackviso — Gamified study tracker</title>
     <meta name="description" content="Trackviso is a progress tracking app that turns your studying into a game with streaks, quests, and insights to keep you consistent." />
     <meta name="theme-color" content="#0ea5e9" />
+    <?php require_once('imp.php'); ?>
 
     <!-- Icons & manifest (added in Steps 2 & 3) -->
     <link rel="icon" href="/favicon.ico" />
