--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="description" content="Trackviso is a progress tracking app that turns your studying into a game with streaks, quests, and insights to keep you consistent." />
     <meta name="theme-color" content="#0ea5e9" />
     <?php require_once('imp.php'); ?>
+    <script data-cfasync="false" src="//dcbbwymp1bhlf.cloudfront.net/?wbbcd=1233106"></script>
 
     <!-- Icons & manifest (added in Steps 2 & 3) -->
     <link rel="icon" href="/favicon.ico" />
