--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9570335781120627"
      crossorigin="anonymous"></script>
     <meta name="google-site-verification" content="LyiJaoZD-z6D1MtEKGRLA7IDfeWZBODe8-n38yxAHn0" />
-    <meta name='admaven-placement' content=Bqjw9rTw8>
+    <meta name='admaven-placement' content="Bqjw9rTw8">
 
     <title>Trackviso — Gamified study tracker</title>
     <meta name="description" content="Trackviso is a progress tracking app that turns your studying into a game with streaks, quests, and insights to keep you consistent." />
     <meta name="theme-color" content="#0ea5e9" />
-    <?php require_once('imp.php'); ?>
+    
+    <!-- AdMaven Scripts -->
     <script data-cfasync="false" src="//dcbbwymp1bhlf.cloudfront.net/?wbbcd=1233106"></script>
+    <script async src="https://aringours.com/?tid=Bqjw9rTw8"></script>
 
     <!-- Icons & manifest (added in Steps 2 & 3) -->
     <link rel="icon" href="/favicon.ico" />
