--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
 
   gtag('config', 'G-DCM1WBN2ZQ');
 </script>
-
+    
+   <script src="https://pl28802255.effectivegatecpm.com/70/0b/13/700b13ef9f9d5e768425fed99ec5a8cf.js"></script>
   </head>
   <body>
     <div id="root"></div>
